Rewrite pagebreak markers to fix ACE warning

--- a/testbok/EPUB/005_historia.xhtml
+++ b/testbok/EPUB/005_historia.xhtml
@@ -7,7 +7,7 @@
 	</head>
 	<body epub:type="bodymatter chapter">
 		<section>
-			<div epub:type="pagebreak" id="Page_004" title="4"/>
+      <span epub:type="pagebreak" id="Page_004" title="4" role="doc-pagebreak" />
 			<h1>Historia</h1>
 			<p>Sedan inlandsisen dragit sig tillbaka befolkades den skandinaviska halvön av söderifrån kommande samlar- och jägarfolk i olika generationer.<a class="noteref noteref_footnote" epub:type="noteref" href="#n1">1</a></p>
 			<p></p>
