--- a/testbok/EPUB/007_sevardheter.xhtml
+++ b/testbok/EPUB/007_sevardheter.xhtml
@@ -7,7 +7,7 @@
 </head>
 <body>
 <section>
-  <div epub:type="pagebreak" id="Page_007" title="7" />
+  <span epub:type="pagebreak" id="Page_007" title="7" role="doc-pagebreak" />
   <h1>Sevärdheter</h1>
 	<p>Det finns en rad sevärdheter i Sverige för den som vill uppleva Sveriges främsta turistmål.</p>
   <section>
