--- a/testbok/EPUB/006_geografi_och_natur.xhtml
+++ b/testbok/EPUB/006_geografi_och_natur.xhtml
@@ -6,7 +6,7 @@
 </head>
 <body epub:type="bodymatter chapter">
 <section>
-  <div epub:type="pagebreak" id="Page_005" title="5" />
+  <span epub:type="pagebreak" id="Page_005" title="5" role="doc-pagebreak" />
   <h1>Geografi och natur</h1>
 	<p>Sverige ligger i norra Europa, på östra delen av den skandinaviska halvön och sträcker sig över ungefär 17 latituder (breddgrader) och 15 longituder (meridianer).</p>
 
