Fix toc missing matching ARIA role warning

--- a/testbok/EPUB/nav.xhtml
+++ b/testbok/EPUB/nav.xhtml
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/testbok.css" />
 	</head>
 	<body>
-		<nav epub:type="toc">
+		<nav epub:type="toc" role="doc-toc">
 			<h1 class="title">Innehållsförteckning</h1>
 			<ol>
 				<li>
