Add fragment links for headers

--- a/testbok/EPUB/001_front.xhtml
+++ b/testbok/EPUB/001_front.xhtml
@@ -1,35 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="sv" lang="sv">
-    <head>
-    	<title>EPUB 3.0 Testbok</title>
-        <meta charset="utf-8" />
+<head>
+  <title>EPUB 3.0 Testbok</title>
+  <meta charset="utf-8" />
+</head>
 
-    </head>
-    <body>
+<body>
 
-    	<section>
-    		<h1>Test av EPUB 3.0 som tillgänglig e-bok</h1>
-
-    		<section>
-    			<h2>Om e-boken</h2>
-<p>Denna bok innehåller grundläggande tester ...</p>
-    		</section>
-
-    		<section>
-    			<h2>Hur används e-boken</h2>
-    			<p>Boken följer ...</p>
-
-
-    		</section>
 <section>
-<h2>Instruktioner</h2>
+  <h1 id="rub-front-1">Test av EPUB 3.0 som tillgänglig e-bok</h1>
 
+  <section>
+    <h2 id="rub-front-2">Om e-boken</h2>
+    <p>Denna bok innehåller grundläggande tester ...</p>
+  </section>
 
-<p>Varje testmoment ...</p>
+  <section>
+    <h2 id="rub-front-3">Hur används e-boken</h2>
+    <p>Boken följer ...</p>
+  </section>
+
+  <section>
+    <h2 id="rub-front-4">Instruktioner</h2>
+    <p>Varje testmoment ...</p>
+  </section>
 
 </section>
-    	</section>
 
-    </body>
+</body>
 </html>
