--- a/testbok/EPUB/003_sveriges_tatorter.xhtml
+++ b/testbok/EPUB/003_sveriges_tatorter.xhtml
@@ -6,7 +6,7 @@
 </head>
 <body epub:type="bodymatter chapter">
 <span role="doc-pagebreak" id="Page_002" aria-label="2" />
-<h1>Sveriges tätorter</h1>
+<h1 id="rub-sveriges_tatorter-1">Sveriges tätorter</h1>
 <p>Följande tabell visar Sveriges fyra största tätorter.</p>
 <table border="1">
   <tbody>
