--- a/testbok/EPUB/004_sveriges_ekonomi.xhtml
+++ b/testbok/EPUB/004_sveriges_ekonomi.xhtml
@@ -8,10 +8,10 @@
 <body epub:type="bodymatter chapter">
 <section>
   <span role="doc-pagebreak" id="Page_003" aria-label="3" />
-  <h1>Sveriges ekonomi</h1>
+  <h1 id="rub-sverige_ekonomi-1">Sveriges ekonomi</h1>
   <p>Sveriges valuta är svensk krona (SEK). Sveriges köpkraftsjusterade bruttonationalprodukt uppskattades 2005 till 270,5 miljarder amerikanska dollar. BNP per capita var 36 578  dollar år 2007. Medelbruttoinkomsten per invånare var 28 400 svenska kronor i månaden under år 2010.</p>
   <section>
-    <h2>Arbetsmarknad</h2>
+    <h2 id="rub-sverige_ekonomi-2">Arbetsmarknad</h2>
     <p>I juli 2012 var arbetslösheten i Sverige på 7 procent. Störst var arbetslösheten i Norrbottens län med 10,5 procent, minst i Stockholms län med 3,9 procent (2012, juli). Ungdomsarbetslösheten (åldern 15–24 år) uppmättes till 16,9 procent, vilket är en bra bit under EU-genomsnitt som ligger på 22,6 procent (första kvartalet 2012).</p>
     <aside epub:type="sidebar" class="secondary-content">
       <p>Sveriges BNP per capita (PPP) växer i samma takt med andra avancerade ekonomier.</p>
@@ -20,7 +20,7 @@
   </section>
 
   <section>
-    <h2>Näringsliv</h2>
+    <h2 id="rub-sverige_ekonomi-3">Näringsliv</h2>
     <p> Sveriges ekonomi är mycket starkt orienterad mot export och handel med utlandet, exporten har de senaste åren utgjort över 50 procent av <a href="#sidebar-01">BNP</a>.</p>
 
     <aside epub:type="sidebar" id="sidebar-01">
