--- a/testbok/EPUB/006_geografi_och_natur.xhtml
+++ b/testbok/EPUB/006_geografi_och_natur.xhtml
@@ -7,7 +7,7 @@
 <body epub:type="bodymatter chapter">
 <section>
   <span epub:type="pagebreak" id="Page_005" title="5" role="doc-pagebreak" />
-  <h1>Geografi och natur</h1>
+  <h1 id="rub-geografi-1">Geografi och natur</h1>
 	<p>Sverige ligger i norra Europa, på östra delen av den skandinaviska halvön och sträcker sig över ungefär 17 latituder (breddgrader) och 15 longituder (meridianer).</p>
 
   <section>
