--- a/testbok/EPUB/007_sevardheter.xhtml
+++ b/testbok/EPUB/007_sevardheter.xhtml
@@ -8,7 +8,7 @@
 <body>
 <section>
   <span epub:type="pagebreak" id="Page_007" title="7" role="doc-pagebreak" />
-  <h1>Sevärdheter</h1>
+  <h1 id="rub-sevardheter-1">Sevärdheter</h1>
 	<p>Det finns en rad sevärdheter i Sverige för den som vill uppleva Sveriges främsta turistmål.</p>
   <section>
     <h2 id="rub_02_07">Skansens djurpark för barn</h2>
@@ -75,7 +75,7 @@
   </section>
 
   <section>
-    <h2>Kebnekaise</h2>
+    <h2 id="rub_02_11">Kebnekaise</h2>
 
 	<p>Kebnekaise, är Sveriges högsta berg och utgörs av ett bergsmassiv i Kiruna kommun, Norrbottens län (Lappland).</p>
     <!--
