--- a/testbok/EPUB/lankar.xhtml
+++ b/testbok/EPUB/lankar.xhtml
@@ -7,15 +7,15 @@
 <body epub:type="bodymatter chapter">
 <section>
 
-  <h1>Länkar</h1>
+  <h1 id="rub-lankar-1">Länkar</h1>
 
   <section>
-    <h2>Länk till annan sida</h2>
+    <h2 id="rub-lankar-2">Länk till annan sida</h2>
     <p>Här följer en länk till innehåll om <a href="006_geografi_och_natur.xhtml">listor</a>.</p>
   </section>
 
   <section>
-    <h2>Länk inom samma sida</h2>
+    <h2 id="rub-lankar-3">Länk inom samma sida</h2>
     <p>Här följer en länk till innehåll <a href="#link-target-01">längre fram på samma sida</a>.</p>
     <p>Denna text efter länk ska ej ha lästs upp.</p>
 
