--- a/testbok/EPUB/mixed.xhtml
+++ b/testbok/EPUB/mixed.xhtml
@@ -8,7 +8,7 @@
 <body epub:type="bodymatter chapter">
 <section>
 
-  <h1>Blandade språk</h1>
+  <h1 id="rub-mixed-1">Blandade språk</h1>
   <p>Denna text är på svenska. Efter detta stycke följer en engelsk text.</p>
 
   <p class="ex" xml:lang="en" lang="en">
@@ -34,13 +34,13 @@
   </p>
 
   <section>
-    <h2>Fonetik</h2>
+    <h2 id="rub-mixed-2">Fonetik</h2>
     <p>Nedan följer det engelska ordet <em><span xml:lang="en" lang="en">thing</span></em> skrivet med fonetiska tecken.</p>
     <p class="ex"><span class="fon">[&#x03B8;&#x026A;&#x014B;]</span></p>
   </section>
 
   <section>
-    <h2>Diakritiska tecken</h2>
+    <h2 id="rub-mixed-3">Diakritiska tecken</h2>
     <p>Nedan följer en text på polska med en mängd diakritiska tecken.</p>
     <p class="ex" xml:lang="pl" lang="pl">
       Grupowanie treści za pomocą znaczników postaci ułatwia czytanie i nawigowanie po zawartości, ponieważ jest kolejną przeszkodą w logicznej kolejności
