--- a/testbok/EPUB/nav.xhtml
+++ b/testbok/EPUB/nav.xhtml
@@ -10,10 +10,10 @@
 			<h1 class="title">Innehållsförteckning</h1>
 			<ol>
 				<li>
-					<a href="001_front.xhtml">Test av EPUB 3.0 som tillgänglig e-bok</a>
+					<a href="001_front.xhtml#rub-front-1">Test av EPUB 3.0 som tillgänglig e-bok</a>
 				</li>
 				<li>
-					<a href="002_skansen.xhtml">Skansen</a>
+					<a href="002_skansen.xhtml#rub-skansen-1">Skansen</a>
 					<ol>
 						<li>
 							<a href="002_skansen.xhtml#rub_02_01">Historia</a>
@@ -29,7 +29,7 @@
 					</ol>
 				</li>
 				<li>
-					<a href="003_sveriges_tatorter.xhtml">Sveriges största tätorter</a>
+					<a href="003_sveriges_tatorter.xhtml#rub-sveriges_tatorter-1">Sveriges största tätorter</a>
 			<!-- bortagen rubrik -->
 			<!--		<ol>
 						<li>
@@ -39,10 +39,10 @@
 			-->
 				</li>
 				<li>
-					<a href="004_sveriges_ekonomi.xhtml">Sveriges ekonomi</a>
+					<a href="004_sveriges_ekonomi.xhtml#rub-sverige_ekonomi-1">Sveriges ekonomi</a>
 				</li>
 				<li>
-					<a href="005_historia.xhtml">Historia</a>
+					<a href="005_historia.xhtml#rub-historia-1">Historia</a>
 					<ol>
 					<li>
 						<a href="005_historia.xhtml#sigil_toc_id_2">Vasatiden</a>
@@ -53,7 +53,7 @@
 					</ol>
 				</li>
 				<li>
-					<a href="006_geografi_och_natur.xhtml">Geografi och natur</a>
+					<a href="006_geografi_och_natur.xhtml#rub-geografi-1">Geografi och natur</a>
 						<ol>
 							<li>
 								<a href="006_geografi_och_natur.xhtml#geografi-001">Djur och växter</a>
@@ -67,23 +67,23 @@
 						</ol>
 				</li>
         <li>
-          <a href="007_sevardheter.xhtml">Sevärdheter</a>
+          <a href="007_sevardheter.xhtml#rub-sevardheter-1">Sevärdheter</a>
           <ol>
             <li><a href="007_sevardheter.xhtml#rub_02_07">En djurpark för barn</a></li>
             <li><a href="007_sevardheter.xhtml#rub_02_08">Landsbygdens hus</a></li>
 			<li><a href="007_sevardheter.xhtml#rub_02_09">Vasamuseet</a></li>
 			<li><a href="007_sevardheter.xhtml#rub_02_10">Turning Torso</a></li>
-			<li><a href="007_sevardheter.xhtml#rub_02_10">Kebnekaise</a></li>
+			<li><a href="007_sevardheter.xhtml#rub_02_11">Kebnekaise</a></li>
           </ol>
         </li>
         <li>
-          <a href="matte-formler.xhtml">Matteformler</a>
+          <a href="matte-formler.xhtml#rub-matteformler-1">Matteformler</a>
         </li>
         <li>
-          <a href="lankar.xhtml">Länkar</a>
+          <a href="lankar.xhtml#rub-lankar-1">Länkar</a>
         </li>
         <li>
-          <a href="mixed.xhtml">Blandade språk</a>
+          <a href="mixed.xhtml#rub-mixed-1">Blandade språk</a>
         </li>
 				<li>
 					<a href="extern-fotnoter.xhtml">Fotnoter</a>
