--- a/testbok/EPUB/005_historia.xhtml
+++ b/testbok/EPUB/005_historia.xhtml
@@ -8,7 +8,7 @@
 	<body epub:type="bodymatter chapter">
 		<section>
       <span epub:type="pagebreak" id="Page_004" title="4" role="doc-pagebreak" />
-			<h1>Historia</h1>
+			<h1 id="rub-historia-1">Historia</h1>
 			<p>Sedan inlandsisen dragit sig tillbaka befolkades den skandinaviska halvön av söderifrån kommande samlar- och jägarfolk i olika generationer.<a class="noteref noteref_footnote" epub:type="noteref" role="doc-noteref" href="#n1">1</a></p>
 			<p></p>
 
