--- a/testbok/EPUB/matte-formler.xhtml
+++ b/testbok/EPUB/matte-formler.xhtml
@@ -8,7 +8,7 @@
 	<body>
 		<section>
 		<span epub:type="pagebreak" id="Page_006" title="6" role="doc-pagebreak" />
-		<h1>Matteformler</h1>
+		<h1 id="rub-matteformler-1">Matteformler</h1>
 		<p>Efter detta stycke kommer en matematisk formel.</p>
 		<math xmlns="http://www.w3.org/1998/Math/MathML" display="block" alttext="x = (2c) / (-b +- sqrt(b^2 - 4ac))">
 		    <mrow>
