Format nav.xhtml to simplify diffing with Sigil-generated nav

--- a/testbok/EPUB/nav.xhtml
+++ b/testbok/EPUB/nav.xhtml
@@ -1,139 +1,156 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="sv" lang="sv">
-	<head>
-		<title>Innehållsförteckning</title>
-    <link rel="stylesheet" type="text/css" href="css/testbok.css" />
-	</head>
-	<body>
-		<nav epub:type="toc" role="doc-toc">
-			<h1 class="title">Innehållsförteckning</h1>
-			<ol>
-				<li>
-					<a href="001_front.xhtml#rub-front-1">Test av EPUB 3.0 som tillgänglig e-bok</a>
-				</li>
-				<li>
-					<a href="002_skansen.xhtml#rub-skansen-1">Skansen</a>
-					<ol>
-						<li>
-							<a href="002_skansen.xhtml#rub_02_01">Historia</a>
-							<ol>
-								<li>
-									<a href="002_skansen.xhtml#rub_03_01">Skansens naturhistoriska avdelning</a>
-								</li>
-							</ol>
-						</li>
-						<li>
-						  <a href="002_skansen.xhtml#rub_02_02">Skansens Zoologiska avdelning</a>
-						</li>
-					</ol>
-				</li>
-				<li>
-					<a href="003_sveriges_tatorter.xhtml#rub-sveriges_tatorter-1">Sveriges största tätorter</a>
-			<!-- bortagen rubrik -->
-			<!--		<ol>
-						<li>
-							<a href="tabeller.xhtml#rub_02_01">Hoppa ur en tabell</a>
-						</li>
-					</ol>
-			-->
-				</li>
-				<li>
-					<a href="004_sveriges_ekonomi.xhtml#rub-sverige_ekonomi-1">Sveriges ekonomi</a>
-				</li>
-				<li>
-					<a href="005_historia.xhtml#rub-historia-1">Historia</a>
-					<ol>
-					<li>
-						<a href="005_historia.xhtml#sigil_toc_id_2">Vasatiden</a>
-					</li>
-					<li>
-					  <a href="005_historia.xhtml#sigil_toc_id_3">Sverige som stormakt</a>
-					</li>
-					</ol>
-				</li>
-				<li>
-					<a href="006_geografi_och_natur.xhtml#rub-geografi-1">Geografi och natur</a>
-						<ol>
-							<li>
-								<a href="006_geografi_och_natur.xhtml#geografi-001">Djur och växter</a>
-							</li>
-							<li>
-							  <a href="006_geografi_och_natur.xhtml#geografi-002">Fåglar i sverige</a>
-							</li>
-							<li>
-							  <a href="006_geografi_och_natur.xhtml#geografi-003">Definitionslista</a>
-							</li>
-						</ol>
-				</li>
+
+<head>
+  <title>Innehållsförteckning</title>
+  <link rel="stylesheet" type="text/css" href="css/testbok.css" />
+</head>
+
+<body>
+
+<nav epub:type="toc" role="doc-toc">
+  <h1 class="title">Innehållsförteckning</h1>
+
+  <ol>
+    <li>
+      <a href="001_front.xhtml#rub-front-1">Test av EPUB 3.0 som tillgänglig e-bok</a>
+    </li>
+    <li>
+      <a href="002_skansen.xhtml#rub-skansen-1">Skansen</a>
+      <ol>
         <li>
-          <a href="007_sevardheter.xhtml#rub-sevardheter-1">Sevärdheter</a>
+          <a href="002_skansen.xhtml#rub_02_01">Historia</a>
           <ol>
-            <li><a href="007_sevardheter.xhtml#rub_02_07">En djurpark för barn</a></li>
-            <li><a href="007_sevardheter.xhtml#rub_02_08">Landsbygdens hus</a></li>
-			<li><a href="007_sevardheter.xhtml#rub_02_09">Vasamuseet</a></li>
-			<li><a href="007_sevardheter.xhtml#rub_02_10">Turning Torso</a></li>
-			<li><a href="007_sevardheter.xhtml#rub_02_11">Kebnekaise</a></li>
+            <li>
+              <a href="002_skansen.xhtml#rub_03_01">Skansens naturhistoriska avdelning</a>
+            </li>
           </ol>
         </li>
         <li>
-          <a href="matte-formler.xhtml#rub-matteformler-1">Matteformler</a>
+          <a href="002_skansen.xhtml#rub_02_02">Skansens Zoologiska avdelning</a>
+        </li>
+      </ol>
+    </li>
+    <li>
+      <a href="003_sveriges_tatorter.xhtml#rub-sveriges_tatorter-1">Sveriges största tätorter</a>
+      <!-- bortagen rubrik -->
+      <!--		<ol>
+                        <li>
+                            <a href="tabeller.xhtml#rub_02_01">Hoppa ur en tabell</a>
+                        </li>
+                    </ol>
+            -->
+    </li>
+    <li>
+      <a href="004_sveriges_ekonomi.xhtml#rub-sverige_ekonomi-1">Sveriges ekonomi</a>
+    </li>
+    <li>
+      <a href="005_historia.xhtml#rub-historia-1">Historia</a>
+      <ol>
+        <li>
+          <a href="005_historia.xhtml#sigil_toc_id_2">Vasatiden</a>
         </li>
         <li>
-          <a href="lankar.xhtml#rub-lankar-1">Länkar</a>
+          <a href="005_historia.xhtml#sigil_toc_id_3">Sverige som stormakt</a>
+        </li>
+      </ol>
+    </li>
+    <li>
+      <a href="006_geografi_och_natur.xhtml#rub-geografi-1">Geografi och natur</a>
+      <ol>
+        <li>
+          <a href="006_geografi_och_natur.xhtml#geografi-001">Djur och växter</a>
         </li>
         <li>
-          <a href="mixed.xhtml#rub-mixed-1">Blandade språk</a>
+          <a href="006_geografi_och_natur.xhtml#geografi-002">Fåglar i sverige</a>
         </li>
-				<li>
-					<a href="extern-fotnoter.xhtml">Fotnoter</a>
-				</li>
         <li>
-          <a href="extern-bildbeskrivningar.xhtml">Bildbeskrivningar</a>
+          <a href="006_geografi_och_natur.xhtml#geografi-003">Definitionslista</a>
         </li>
-
-			</ol>
-		</nav>
-
-		<nav role="doc-pagelist" aria-label="Svartskriftssidor" epub:type="page-list">
-      <!-- TODO Läses "Svartskriftssidor" upp två gånger om det både är aria-label och h1? -->
-			<h1>Svartskriftssidor</h1>
-			<ol>
-				<li>
-					<a href="002_skansen.xhtml#Page_001">1</a>
-				</li>
-
+      </ol>
+    </li>
+    <li>
+      <a href="007_sevardheter.xhtml#rub-sevardheter-1">Sevärdheter</a>
+      <ol>
         <li>
-          <a href="002_skansen.xhtml#Page_001-2">2</a>
+          <a href="007_sevardheter.xhtml#rub_02_07">En djurpark för barn</a>
         </li>
+        <li>
+          <a href="007_sevardheter.xhtml#rub_02_08">Landsbygdens hus</a>
+        </li>
+        <li>
+          <a href="007_sevardheter.xhtml#rub_02_09">Vasamuseet</a>
+        </li>
+        <li>
+          <a href="007_sevardheter.xhtml#rub_02_10">Turning Torso</a>
+        </li>
+        <li>
+          <a href="007_sevardheter.xhtml#rub_02_11">Kebnekaise</a>
+        </li>
+      </ol>
+    </li>
+    <li>
+      <a href="matte-formler.xhtml#rub-matteformler-1">Matteformler</a>
+    </li>
+    <li>
+      <a href="lankar.xhtml#rub-lankar-1">Länkar</a>
+    </li>
+    <li>
+      <a href="mixed.xhtml#rub-mixed-1">Blandade språk</a>
+    </li>
+    <li>
+      <a href="extern-fotnoter.xhtml">Fotnoter</a>
+    </li>
+    <li>
+      <a href="extern-bildbeskrivningar.xhtml">Bildbeskrivningar</a>
+    </li>
 
-				<li>
-					<a href="003_sveriges_tatorter.xhtml#Page_002">3</a>
-				</li>
+  </ol>
+</nav>
 
-				<li>
-					<a href="004_sveriges_ekonomi.xhtml#Page_003">4</a>
-				</li>
-				<li>
-					<a href="005_historia.xhtml#Page_004">5</a>
-				</li>
-				<li>
-					<a href="006_geografi_och_natur.xhtml#Page_005">6</a>
-				</li>
-				<li>
-					<a href="matte-formler.xhtml#Page_006">7</a>
-				</li>
-				<li>
-					<a href="007_sevardheter.xhtml#Page_007">8</a>
-				</li>
-			</ol>
-		</nav>
-		<nav epub:type="landmarks">
-			<ol>
-				<li>
-					<a href="002_skansen.xhtml" epub:type="bodymatter">Början av boken.</a>
-				</li>
-			</ol>
-		</nav>
-	</body>
+<nav role="doc-pagelist" aria-label="Svartskriftssidor" epub:type="page-list">
+  <!-- TODO Läses "Svartskriftssidor" upp två gånger om det både är aria-label och h1? -->
+  <h1>Svartskriftssidor</h1>
+
+  <ol>
+    <li>
+      <a href="002_skansen.xhtml#Page_001">1</a>
+    </li>
+
+    <li>
+      <a href="002_skansen.xhtml#Page_001-2">2</a>
+    </li>
+
+    <li>
+      <a href="003_sveriges_tatorter.xhtml#Page_002">3</a>
+    </li>
+
+    <li>
+      <a href="004_sveriges_ekonomi.xhtml#Page_003">4</a>
+    </li>
+    <li>
+      <a href="005_historia.xhtml#Page_004">5</a>
+    </li>
+    <li>
+      <a href="006_geografi_och_natur.xhtml#Page_005">6</a>
+    </li>
+    <li>
+      <a href="matte-formler.xhtml#Page_006">7</a>
+    </li>
+    <li>
+      <a href="007_sevardheter.xhtml#Page_007">8</a>
+    </li>
+  </ol>
+</nav>
+
+<nav epub:type="landmarks">
+  <ol>
+    <li>
+      <a href="002_skansen.xhtml" epub:type="bodymatter">Början av boken.</a>
+    </li>
+  </ol>
+</nav>
+
+</body>
 </html>
