Delete part of figure texts

--- a/testbok/EPUB/007_sevardheter.xhtml
+++ b/testbok/EPUB/007_sevardheter.xhtml
@@ -35,7 +35,7 @@
     <figure>
       <img src="images/samisk-familj.jpg" alt="Samisk familj vid samevistet." />
       <figcaption>
-        Figur 1. Samisk familj vid samevistet, ca 1890-1910.
+        Samisk familj vid samevistet, ca 1890-1910.
       </figcaption>
     </figure>
     <p>Byggnaderna är gårdar och stugor som placerades så att hus och gårdar från södra Sverige ligger på södra Skansen och byggnader från norra Sverige ligger på norra delen. Runt hus och gårdar speglar växtligheten landskapet huset kommer ifrån.</p>
@@ -67,7 +67,7 @@
     <figure id="fig-03">
       <img src="images/turning-torso.jpg" alt="En bild som visar skyskraparen Turning Torso." />
       <figcaption>
-        Figur 3. Turning Torso. <a role="doc-noteref" epub:type="noteref"
+        Turning Torso. <a role="doc-noteref" epub:type="noteref"
                                    href="extern-bildbeskrivningar.xhtml#desc-03">Beskrivning</a>
       </figcaption>
     </figure>
@@ -89,7 +89,7 @@
       <img src="images/kebnekaise.jpg" alt="Bilden visar en vyn över Kebnekaise från Tarfaladalen"
            aria-describedby="desc-05" />
       <figcaption>
-        Figur 4. Vy över Kebnekaise från Tarfaladalen.
+        Vy över Kebnekaise från Tarfaladalen.
         <aside id="desc-05" hidden="hidden">
           <p>
             På bilden visas en vy öster om den bergsrygg som Kebnekaises nord- och sydtopp ingår i.
