--- a/testbok/EPUB/001_front.xhtml
+++ b/testbok/EPUB/001_front.xhtml
@@ -13,17 +13,12 @@
 
   <section>
     <h2 id="rub-front-2">Om e-boken</h2>
-    <p>Denna bok innehåller grundläggande tester ...</p>
+    <p>Syftet med denna bok är att testa olika läsprogram för EPUB-böcker. Boken innehåller korta texter på olika nivåer samt tabeller och bilder.</p>
   </section>
 
   <section>
     <h2 id="rub-front-3">Hur används e-boken</h2>
     <p>Boken följer ...</p>
-  </section>
-
-  <section>
-    <h2 id="rub-front-4">Instruktioner</h2>
-    <p>Varje testmoment ...</p>
   </section>
 
 </section>
