Update file name for math document

--- a/testbok/EPUB/nav.xhtml
+++ b/testbok/EPUB/nav.xhtml
@@ -100,7 +100,7 @@
       </ol>
     </li>
     <li>
-      <a href="matte-formler.xhtml#rub-matteformler-1">Matteformler</a>
+      <a href="008_matte-formler.xhtml#rub-matteformler-1">Matteformler</a>
     </li>
     <li>
       <a href="lankar.xhtml#rub-lankar-1">Länkar</a>
@@ -155,7 +155,7 @@
       <a href="006_geografi_och_natur.xhtml#Page_005">6</a>
     </li>
     <li>
-      <a href="matte-formler.xhtml#Page_006">7</a>
+      <a href="008_matte-formler.xhtml#Page_006">7</a>
     </li>
     <li>
       <a href="007_sevardheter.xhtml#Page_007">8</a>
