Identify chapter sections

--- a/testbok/EPUB/001_front.xhtml
+++ b/testbok/EPUB/001_front.xhtml
@@ -8,7 +8,7 @@
 
 <body>
 
-<section>
+<section role="doc-chapter" aria-labelledby="rub-front-1">
   <h1 id="rub-front-1">Test av EPUB 3.0 som tillgänglig e-bok</h1>
 
   <section>
