--- a/testbok/EPUB/002_skansen.xhtml
+++ b/testbok/EPUB/002_skansen.xhtml
@@ -5,7 +5,7 @@
 		<title>Skansen</title>
 	</head>
 	<body epub:type="bodymatter chapter">
-		<section>
+		<section role="doc-chapter" aria-labelledby="rub-skansen-1">
       <span role="doc-pagebreak" id="Page_001" aria-label="1" />
 			<!-- TODO - visa sidnumren i html? -->
 			<h1 id="rub-skansen-1">Skansen</h1>
