--- a/testbok/EPUB/004_sveriges_ekonomi.xhtml
+++ b/testbok/EPUB/004_sveriges_ekonomi.xhtml
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="css/testbok.css" />
 </head>
 <body epub:type="bodymatter chapter">
-<section>
+<section role="doc-chapter" aria-labelledby="rub-sverige_ekonomi-1">
   <span role="doc-pagebreak" id="Page_003" aria-label="3" />
   <h1 id="rub-sverige_ekonomi-1">Sveriges ekonomi</h1>
   <p>Sveriges valuta är svensk krona (SEK). Sveriges köpkraftsjusterade bruttonationalprodukt uppskattades 2005 till 270,5 miljarder amerikanska dollar. BNP per capita var 36 578  dollar år 2007. Medelbruttoinkomsten per invånare var 28 400 svenska kronor i månaden under år 2010.</p>
