--- a/testbok/EPUB/007_sevardheter.xhtml
+++ b/testbok/EPUB/007_sevardheter.xhtml
@@ -6,7 +6,7 @@
   <title>Sevärdheter</title>
 </head>
 <body>
-<section>
+<section role="doc-chapter" aria-labelledby="rub-sevardheter-1">
   <span epub:type="pagebreak" id="Page_007" title="7" role="doc-pagebreak" />
   <h1 id="rub-sevardheter-1">Sevärdheter</h1>
 	<p>Det finns en rad sevärdheter i Sverige för den som vill uppleva Sveriges främsta turistmål.</p>
