--- a/testbok/EPUB/008_matte-formler.xhtml
+++ b/testbok/EPUB/008_matte-formler.xhtml
@@ -6,7 +6,7 @@
 		<title>Matte och MathML</title>
 	</head>
 	<body>
-		<section>
+		<section role="doc-chapter" aria-labelledby="rub-matteformler-1">
 		<span epub:type="pagebreak" id="Page_006" title="6" role="doc-pagebreak" />
 		<h1 id="rub-matteformler-1">Matteformler</h1>
 		<p>Efter detta stycke kommer en matematisk formel.</p>
