--- a/testbok/EPUB/003_sveriges_tatorter.xhtml
+++ b/testbok/EPUB/003_sveriges_tatorter.xhtml
@@ -2,46 +2,48 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="sv" lang="sv">
 <head>
-    <title>Sveriges tätorter</title>
+  <title>Sveriges tätorter</title>
 </head>
 <body epub:type="bodymatter chapter">
-<span role="doc-pagebreak" id="Page_002" aria-label="2" />
-<h1 id="rub-sveriges_tatorter-1">Sveriges tätorter</h1>
-<p>Följande tabell visar Sveriges fyra största tätorter.</p>
-<table border="1">
-  <tbody>
-  <tr>
-    <th scope="col">Tätort</th>
-    <th scope="col">Län</th>
-    <th scope="col">Befolkning i tätorten</th>
-    <th scope="col">Befolkning i dess främsta kommun</th>
-  </tr>
-  <tr>
-    <td class="center">Stockholm</td>
-    <td class="center">Stockholms län</td>
-    <td class="center">1 562 136</td>
-    <td class="center">955 397</td>
-  </tr>
-  <tr>
-    <td class="center">Göteborg</td>
-    <td class="center">Västra Götalands län</td>
-    <td class="center">590 580</td>
-    <td class="center">567 337</td>
-  </tr>
-  <tr>
-    <td class="center">Malmö</td>
-    <td class="center">Skåne län</td>
-    <td class="center">312 012</td>
-    <td class="center">336 226</td>
-  </tr>
-  <tr>
-    <td class="center">Uppsala</td>
-    <td class="center">Uppsala län</td>
-    <td class="center">156 854</td>
-    <td class="center">221 551</td>
-  </tr>
-  </tbody>
-</table>
-<p>Statiskten är den senaste som publicerats i wikipedia.</p>
+<section role="doc-chapter" aria-labelledby="rub-sveriges_tatorter-1">
+  <span role="doc-pagebreak" id="Page_002" aria-label="2" />
+  <h1 id="rub-sveriges_tatorter-1">Sveriges tätorter</h1>
+  <p>Följande tabell visar Sveriges fyra största tätorter.</p>
+  <table border="1">
+    <tbody>
+    <tr>
+      <th scope="col">Tätort</th>
+      <th scope="col">Län</th>
+      <th scope="col">Befolkning i tätorten</th>
+      <th scope="col">Befolkning i dess främsta kommun</th>
+    </tr>
+    <tr>
+      <td class="center">Stockholm</td>
+      <td class="center">Stockholms län</td>
+      <td class="center">1 562 136</td>
+      <td class="center">955 397</td>
+    </tr>
+    <tr>
+      <td class="center">Göteborg</td>
+      <td class="center">Västra Götalands län</td>
+      <td class="center">590 580</td>
+      <td class="center">567 337</td>
+    </tr>
+    <tr>
+      <td class="center">Malmö</td>
+      <td class="center">Skåne län</td>
+      <td class="center">312 012</td>
+      <td class="center">336 226</td>
+    </tr>
+    <tr>
+      <td class="center">Uppsala</td>
+      <td class="center">Uppsala län</td>
+      <td class="center">156 854</td>
+      <td class="center">221 551</td>
+    </tr>
+    </tbody>
+  </table>
+  <p>Statiskten är den senaste som publicerats i wikipedia.</p>
+</section>
 </body>
 </html>
