Add Java code sample (ncx not updated yet)

--- a/testbok/EPUB/nav.xhtml
+++ b/testbok/EPUB/nav.xhtml
@@ -103,6 +103,9 @@
       <a href="008_matte-formler.xhtml#rub-matteformler-1">Matteformler</a>
     </li>
     <li>
+      <a href="009_programkod.xhtml#rub-programkod-1">Programkod</a>
+    </li>
+    <li>
       <a href="lankar.xhtml#rub-lankar-1">Länkar</a>
       <ol>
         <li>
