Add changes to link document

--- a/testbok/EPUB/nav.xhtml
+++ b/testbok/EPUB/nav.xhtml
@@ -100,18 +100,18 @@
       </ol>
     </li>
     <li>
-      <a href="008_matte-formler.xhtml#rub-matteformler-1">Matteformler</a>
-    </li>
-    <li>
-      <a href="lankar.xhtml#rub-lankar-1">Länkar</a>
+      <a href="008_klimat.xhtml#rub-lankar-1">Klimat</a>
       <ol>
         <li>
-          <a href="lankar.xhtml#rub-lankar-2">Länk till annan sida</a>
+          <a href="008_klimat.xhtml#rub-lankar-2">Norra Sverige</a>
         </li>
         <li>
-          <a href="lankar.xhtml#rub-lankar-3">Länk inom samma sida</a>
+          <a href="008_klimat.xhtml#rub-lankar-3">Södra Sverige</a>
         </li>
       </ol>
+    </li>
+	    <li>
+      <a href="009_matte-formler.xhtml#rub-matteformler-1">Matteformler</a>
     </li>
     <li>
       <a href="mixed.xhtml#rub-mixed-1">Blandade språk</a>
@@ -155,10 +155,13 @@
       <a href="006_geografi_och_natur.xhtml#Page_005">6</a>
     </li>
     <li>
-      <a href="008_matte-formler.xhtml#Page_006">7</a>
+      <a href="007_sevardheter.xhtml#Page_006">7</a>
+    </li>
+	<li>
+      <a href="008_klimat.xhtml#Page_007">8</a>
     </li>
     <li>
-      <a href="007_sevardheter.xhtml#Page_007">8</a>
+      <a href="009_matte-formler.xhtml#Page_008">9</a>
     </li>
   </ol>
 </nav>
