Add changes and fix previous merge

--- a/testbok/EPUB/nav.xhtml
+++ b/testbok/EPUB/nav.xhtml
@@ -10,7 +10,7 @@
 <body>
 
 <nav epub:type="toc" role="doc-toc">
-  <h1 class="title">Innehållsförteckning</h1>
+  <h1 class="title">Innehållsförtecknings</h1>
 
   <ol>
     <li>
@@ -100,17 +100,7 @@
       </ol>
     </li>
     <li>
-<<<<<<< HEAD
       <a href="008_klimat.xhtml#rub-lankar-1">Klimat</a>
-=======
-      <a href="008_matte-formler.xhtml#rub-matteformler-1">Matteformler</a>
-    </li>
-    <li>
-      <a href="009_programkod.xhtml#rub-programkod-1">Programkod</a>
-    </li>
-    <li>
-      <a href="lankar.xhtml#rub-lankar-1">Länkar</a>
->>>>>>> 479ddcd7cbfb22ad2423288883bb7809ce5ea2d4
       <ol>
         <li>
           <a href="008_klimat.xhtml#rub-lankar-2">Norra Sverige</a>
