--- a/testbok/EPUB/007_sevardheter.xhtml
+++ b/testbok/EPUB/007_sevardheter.xhtml
@@ -1,18 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops"
-      xml:lang="sv" lang="sv">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="sv" lang="sv">
 <head>
   <title>Sevärdheter</title>
 </head>
 <body>
-<<<<<<< HEAD
-<section>
+ <section>
   <span epub:type="pagebreak" id="Page_006" title="7" role="doc-pagebreak" />
-=======
-<section role="doc-chapter" aria-labelledby="rub-sevardheter-1">
-  <span epub:type="pagebreak" id="Page_007" title="7" role="doc-pagebreak" />
->>>>>>> 479ddcd7cbfb22ad2423288883bb7809ce5ea2d4
   <h1 id="rub-sevardheter-1">Sevärdheter</h1>
 	<p>Det finns en rad sevärdheter i Sverige för den som vill uppleva Sveriges främsta turistmål.</p>
   <section>
