--- a/testbok/EPUB/001_front.xhtml
+++ b/testbok/EPUB/001_front.xhtml
@@ -13,12 +13,12 @@
 
   <section>
     <h2 id="rub-front-2">Om e-boken</h2>
-    <p>Syftet med denna bok är att testa olika läsprogram för EPUB-böcker. Boken innehåller korta texter på olika nivåer samt tabeller och bilder.</p>
+    <p>Denna bok innehåller korta texter på olika nivåer samt tabeller och bilder. Syftet med boken är att testa olika läsprogram för EPUB-böcker. Den är därför utformad efter rekommendationer för tillgänglighet enligt <a href="http://kb.daisy.org/publishing/" title="Daisy Accessible Publishing Knowledge Base">http://kb.daisy.org/publishing/</a>.</p>
   </section>
 
   <section>
     <h2 id="rub-front-3">Hur används e-boken</h2>
-    <p>Boken följer ...</p>
+    <p>Boken är i första hand tänkt som ett verktyg för att användare med synskada ska kunna testa olika funktioner i sin skärmläsare. För att användaren ska kunna bekräfta funktionaliteten så behöver testerna utföras parallellt med en frågeformulär. Detta dokument utgör även en facit och finns att hämta [HÄR] och [här] ...</p>
   </section>
 
 </section>
