--- a/testbok/EPUB/001_front.xhtml
+++ b/testbok/EPUB/001_front.xhtml
@@ -13,7 +13,7 @@
 
   <section>
     <h2 id="rub-front-2">Om e-boken</h2>
-    <p>Denna bok innehåller korta texter på olika nivåer samt tabeller och bilder. Syftet med boken är att testa olika läsprogram för EPUB-böcker. Boken är framtagen i ett utvecklingsprojekt under 2018 drivet gemensamt av MTM och SPSM. Boken är utformad efter rekommendationer för tillgänglighet enligt <a href="http://kb.daisy.org/publishing/" title="Daisy Accessible Publishing Knowledge Base">http://kb.daisy.org/publishing/</a>. Kontaktpersoner på MTM: Björn Westling och Tam Johnson, <a href="http://www.mtm.se" title="MTMs hemsida">http://www.mtm.se</a>. Kontaktpersoner på SPSM: Anders Eklund och Charlotta Duit, <a href="http://www.spsm.se" title="SPSMs hemsida">http://www.spsm.se</a></p>
+    <p>Denna bok innehåller korta texter på olika nivåer samt tabeller och bilder. Syftet med boken är att testa olika läsprogram för EPUB-böcker. Boken är framtagen i ett utvecklingsprojekt under 2018 drivet gemensamt av MTM och SPSM. Boken är utformad efter rekommendationer för tillgänglighet enligt <a href="http://kb.daisy.org/publishing/" title="Daisy Accessible Publishing Knowledge Base">http://kb.daisy.org/publishing/</a>. Kontaktpersoner på MTM: Björn Westling och Tam Johnson, <a href="http://www.mtm.se" title="MTMs hemsida">http://www.mtm.se</a>. Kontaktpersoner på SPSM: Anders Eklund och Charlotta Duit, <a href="http://www.spsm.se" title="SPSMs hemsida">http://www.spsm.se</a>.</p>
   </section>
 
   <section>
