--- a/testbok/EPUB/nav.xhtml
+++ b/testbok/EPUB/nav.xhtml
@@ -10,7 +10,7 @@
 <body>
 
 <nav epub:type="toc" role="doc-toc">
-  <h1 class="title">Innehållsförtecknings</h1>
+  <h1 class="title">Innehållsförteckning</h1>
 
   <ol>
     <li>
