--- a/testbok/EPUB/nav.xhtml
+++ b/testbok/EPUB/nav.xhtml
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="sv" lang="sv">
 
 <head>
-  <title>Innehållsförteckning</title>
+  <title>Testbok EPUB3</title>
   <link rel="stylesheet" type="text/css" href="css/testbok.css" />
 </head>
 
