Add ARIA 1.1 role for landmarks

--- a/testbok/EPUB/nav.xhtml
+++ b/testbok/EPUB/nav.xhtml
@@ -169,7 +169,7 @@
   </ol>
 </nav>
 
-<nav epub:type="landmarks">
+<nav epub:type="landmarks" role="directory">
   <ol>
     <li>
       <a href="002_skansen.xhtml" epub:type="bodymatter">Början av boken.</a>
